@@ -2,11 +2,10 @@ package org.homio.app.repository;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.homio.addon.z2m.model.Z2MDeviceEntity;
 import org.homio.addon.z2m.model.Z2MLocalCoordinatorEntity;
-import org.homio.api.EntityContext;
 import org.homio.addon.z2m.service.Z2MDeviceService;
+import org.homio.api.EntityContext;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -24,8 +23,7 @@ public class Z2MDeviceRepository extends AbstractRepository<Z2MDeviceEntity> {
         List<Z2MDeviceEntity> list = new ArrayList<>();
         for (Z2MLocalCoordinatorEntity coordinator : entityContext.findAll(Z2MLocalCoordinatorEntity.class)) {
             list.addAll(coordinator.getService().getDeviceHandlers().values().stream()
-                                   .map(Z2MDeviceService::getDeviceEntity)
-                                   .collect(Collectors.toList()));
+                                   .map(Z2MDeviceService::getDeviceEntity).toList());
         }
         return list;
     }
